Fix Transitions on IE

--- a/CS_WEB/css/default.css
+++ b/CS_WEB/css/default.css
@@ -467,6 +467,7 @@ body {
 	font-size: large;
 	text-shadow: 0 0 3px rgba(0, 0, 0, .3);
 	position: absolute;
+	top: 0px;
 	-webkit-transition: 0.5s;
 	-moz-transition: 0.5s;
 	-o-transition: 0.5s;
@@ -478,6 +479,7 @@ body {
 	line-height: 27px;
 	font-size: 12px;
 	position: absolute;
+	top: 0px;
 	right: 0px;
 	-webkit-transition: 0.5s;
 	-moz-transition: 0.5s;
@@ -505,6 +507,7 @@ body {
 	line-height: 20px;
 	table-layout: fixed;
 	position: relative;
+	top: 0px;
 	-webkit-transition: 0.5s;
 	-moz-transition: 0.5s;
 	-o-transition: 0.5s;
@@ -545,6 +548,7 @@ body {
 .imagelist {
 	width: 720px;
 	position: absolute;
+	top: 0px;
 	-webkit-transition: 0.5s;
 	-moz-transition: 0.5s;
 	-o-transition: 0.5s;
